forum: fix alignment of handle and icon, fixes #2263
Closes #2263

Merge request studip/studip!1495

--- a/resources/assets/stylesheets/scss/forum.scss
+++ b/resources/assets/stylesheets/scss/forum.scss
@@ -150,7 +150,10 @@ html.no-js #forum {
         height: 50px;
         white-space: nowrap;
         text-align: center;
-        vertical-align: middle;
+
+        * {
+            vertical-align: middle;
+        }
     }
 
     .icon_thread {
